...
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:background="#03244D"
        app:layout_constraintTop_toTopOf="parent"></ListView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addRouteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="@dimen/fab_margin"
...
