...

    <Button
        android:id="@+id/save_SAW"
        android:layout_width="118dp"
        android:layout_height="61dp"
        android:layout_marginBottom="36dp"
        android:text="START"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
...
